fixed overflow scrollbar showing unintentionally

--- a/css/d_cart_checkout.css
+++ b/css/d_cart_checkout.css
@@ -18,7 +18,7 @@
 	filter: drop-shadow(0px 5px 3px rgba(0, 0, 0, 0.2));
     border-radius: 20px;
     row-gap: 10px;
-    overflow: scroll;
+    overflow: auto;
     scroll-behavior: smooth;
 }
 
