--- a/css/d_order_proper.css
+++ b/css/d_order_proper.css
@@ -56,7 +56,7 @@
     display: grid;
     grid-auto-rows: max-content;
     row-gap: 10px;
-    overflow: scroll;
+    overflow: auto;
     scroll-behavior: smooth;
     padding-bottom: 20px;
 }
